// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> matches previous snapshot 1`] = `
<section
  className="filters"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12 hidden-xs"
    >
      <span
        className="form-group-title"
        tabIndex="0"
      >
        Filters
      </span>
    </div>
    <div
      className="hidden-xs"
    >
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="segment-filter"
              tabIndex="0"
            >
              Branch/Discipline
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="segment-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Branches/Disciplines
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="category-filter"
              tabIndex="0"
            >
              Category
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="category-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Categories
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="platform-filter"
              tabIndex="0"
            >
              Platform
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="platform-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Platforms
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div>
      <div
        className="col-xs-6 hidden-sm hidden-md hidden-lg"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Show Filters
          </span>
          <i
            aria-hidden="true"
            className="icon-arrowDown"
          />
        </button>
      </div>
      <div
        className="col-xs-6 col-sm-12 text-right"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Reset Filters
          </span>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`<Filters /> matches previous snapshot 2`] = `
<section
  className="filters"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12 hidden-xs"
    >
      <span
        className="form-group-title"
        tabIndex="0"
      >
        Filters
      </span>
    </div>
    <div
      className="hidden-xs"
    >
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="segment-filter"
              tabIndex="0"
            >
              Branch/Discipline
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="segment-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Branches/Disciplines
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="category-filter"
              tabIndex="0"
            >
              Category
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="category-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Categories
              </option>
              <option
                value={undefined}
              />
              <option
                value={undefined}
              />
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="platform-filter"
              tabIndex="0"
            >
              Platform
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="platform-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Platforms
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div>
      <div
        className="col-xs-6 hidden-sm hidden-md hidden-lg"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Show Filters
          </span>
          <i
            aria-hidden="true"
            className="icon-arrowDown"
          />
        </button>
      </div>
      <div
        className="col-xs-6 col-sm-12 text-right"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Reset Filters
          </span>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`<Filters /> matches previous snapshot 3`] = `
<section
  className="filters"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12 hidden-xs"
    >
      <span
        className="form-group-title"
        tabIndex="0"
      >
        Filters
      </span>
    </div>
    <div
      className="hidden-xs"
    >
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="segment-filter"
              tabIndex="0"
            >
              Branch/Discipline
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="segment-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Branches/Disciplines
              </option>
              <option
                value={undefined}
              />
              <option
                value={undefined}
              />
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="category-filter"
              tabIndex="0"
            >
              Category
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="category-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Categories
              </option>
              <option
                value={undefined}
              />
              <option
                value={undefined}
              />
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="platform-filter"
              tabIndex="0"
            >
              Platform
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="platform-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Platforms
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div>
      <div
        className="col-xs-6 hidden-sm hidden-md hidden-lg"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Show Filters
          </span>
          <i
            aria-hidden="true"
            className="icon-arrowDown"
          />
        </button>
      </div>
      <div
        className="col-xs-6 col-sm-12 text-right"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Reset Filters
          </span>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`<Filters /> matches previous snapshot 4`] = `
<section
  className="filters"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12 hidden-xs"
    >
      <span
        className="form-group-title"
        tabIndex="0"
      >
        Filters
      </span>
    </div>
    <div
      className="hidden-xs"
    >
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="segment-filter"
              tabIndex="0"
            >
              Branch/Discipline
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="segment-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Branches/Disciplines
              </option>
              <option
                value={undefined}
              />
              <option
                value={undefined}
              />
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="category-filter"
              tabIndex="0"
            >
              Category
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="category-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Categories
              </option>
              <option
                value={undefined}
              />
              <option
                value={undefined}
              />
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-sm-4 col-xs-12"
      >
        <div
          className="form-group"
        >
          <div>
            <label
              className="control-label filter-category-label"
              htmlFor="platform-filter"
              tabIndex="0"
            >
              Platform
            </label>
            <select
              className="form-control"
              defaultValue={undefined}
              id="platform-filter"
              onChange={[Function]}
            >
              <option
                value=""
              >
                All Platforms
              </option>
              <option
                value={undefined}
              />
              <option
                value={undefined}
              />
            </select>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div>
      <div
        className="col-xs-6 hidden-sm hidden-md hidden-lg"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Show Filters
          </span>
          <i
            aria-hidden="true"
            className="icon-arrowDown"
          />
        </button>
      </div>
      <div
        className="col-xs-6 col-sm-12 text-right"
      >
        <button
          className="filters-button"
          onClick={[Function]}
        >
          <span>
            Reset Filters
          </span>
        </button>
      </div>
    </div>
  </div>
</section>
`;
